--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "Abir Rahaman Resume.pdf", title: "Resume"}
   - {file: "Projects.md", title: "Projects"}
+  - {file: "Coursework.md", title: "Coursework"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:abirr@vt.edu"}
