--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "Resume.md", title: "Resume"}
   - {file: "Projects.md", title: "Projects"}
   - {file: "Coursework.md", title: "Coursework"}
+  - {file: "ProfessionalExperience.md", title: "Professional Experience"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:abirr@vt.edu"}
